tests/miniJava/neg/006847_mutation.MiniJava
class int [] { public static void Main ( String [ ] java ) { { } } }
